[tool.poetry]
name = "visual-chatgpt"
version = "0.1.0"
description = "Vivint version of chatgpt"
authors = ["shortcipher3 <chris.jon.hall@gmail.com>"]
readme = "README.md"
packages = [{include = "visual_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.101"
torch = "1.12.1"
torchvision = "0.13.1"
gradio = "3.20.1"
accelerate = "^0.17.1"
addict = "^2.4.0"
albumentations = "^1.3.0"
basicsr = "^1.4.2"
controlnet-aux = "^0.0.1"
diffusers = "^0.14.0"
einops = "^0.6.0"
imageio = "^2.26.0"
imageio-ffmpeg = "^0.4.8"
invisible-watermark = "^0.1.5"
kornia = "^0.6.10"
numpy = "^1.24.2"
omegaconf = "^2.3.0"
open-clip-torch = "^2.16.0"
openai = "^0.27.2"
opencv-python = "^4.7.0.72"
prettytable = "^3.6.0"
safetensors = "^0.3.0"
streamlit = "^1.20.0"
test-tube = "^0.7.5"
timm = "^0.6.12"
torchmetrics = "^0.11.4"
transformers = "^4.27.1"
webdataset = "^0.2.43"
yapf = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
